--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width = device-width, initial-scale=1.0">
     <title> Anshuman Singh </title>
     <link rel = "stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
