--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -22,15 +23,20 @@
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact Me!</a></li>
             </ul>
+            <!--Amazing way to create a menu bar-->
+            <div class = "menu-btn">
+                <i class="fa fa-bars" style="font-size:36px"></i>
+            </div>
         </div>
     </nav>
 
+    <!-- Home section part-->
     <section class="home" id="home">
         
         <div class="max-width">
             <div id="stars"></div>
-        <div id="stars2"></div>
-        <div id="stars3"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
             <div class="home-content">
                 <div class="text-1">Hey there! I am</div>
                 <div class="text-2">Anshuman Singh</div>
