Skills set  DONE

--- a/index.html
+++ b/index.html
@@ -102,6 +102,50 @@
         </div>
     </section>
 
+
+    <!--THE SKILLS-->
+    <section class = "skills" id ="skills">
+        <div class="max-width">
+            <h2 class="title"> Skillset </h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text"> MY SKILLSET</div> 
+                    <p>Lorem ipjlds bgjbasdkjgbdksbfgkjd sbkjgbdsakjfbk jdasbfjklsdbjkfbsdjkbf kjadsbfjk bsdkjfbkj dsbfkjsdbkjfbdjsk bfkjdsbkjf sbdkjbfjkdsbfsjbsum, dolor sit amet consectetur adipisicing elit. Temporibus, doloremque!</p>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML, CSS</span>
+                            <span> 60% </span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span> 45% </span>
+                        </div>
+                        <div class="line python"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span> C </span>
+                            <span> 50% </span>
+                        </div>
+                        <div class="line c"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>RDBMS</span>
+                            <span> 65% </span>
+                        </div>
+                        <div class="line rdbms"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="script.js"></script>
     
 
