Scroll and foot

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div class="max-width">
             <div class = "logo"><a href = "#">Portfolio</a></div>
             <ul class = "menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact Me!</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact Me!</a></li>
             </ul>
             <!--Amazing way to create a menu bar-->
             <div class = "menu-btn">
@@ -203,6 +203,17 @@
             </div>
         </div>
     </section>
+
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
+
+
+
+    <!--The FOOT PART-->
+    <footer align="center">
+        <span>Created By: <a href="#"> Anshuman Singh </a> | <span class="far fa-copyright"></span> 2021 All Rights reserved. </span>
+    </footer>
     <script src="script.js"></script>
     
 
