--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="https://singhanshuman.hashnode.dev/"> Blog </a></li>
                 <li><a href="#contact">Contact Me!</a></li>
             </ul>
             <!--Amazing way to create a menu bar-->
