Add notification alert at correct place

--- a/index.html
+++ b/index.html
@@ -16,16 +16,6 @@
 </head>
 <body>
     
-    <div class="alert warning">
-  <span class="closebtn">&times;</span>  
-  <strong> 🚧 Hey There!</strong> My website is under-construction and will be moved to <strong>www.anshuman.me</strong> by 1st February. 🚧 
-</div>
-
-<div class="alert success">
-  <span class="closebtn">&times;</span>  
-  <strong>For updated information, please visit <a href="https://www.linkedin.com/in/anshuman-singh-4537731a5/"> My LinkedIn profile</a></strong>
-</div>
-    
     <nav class="navbar">
         <div class="max-width">
             <div class = "logo"><a href = "#">Portfolio</a></div>
@@ -42,6 +32,15 @@
                 <i class="fa fa-bars" style="font-size:36px"></i>
             </div>
         </div>
+        <div class="alert warning">
+			<span class="closebtn">&times;</span>  
+				<strong> 🚧 Hey There!</strong> My website is under-construction and will be moved to <strong>www.anshuman.me</strong> by 1st February. 🚧 
+		</div>
+
+		<div class="alert success">
+			<span class="closebtn">&times;</span>  
+				<strong>For updated information, please visit <a href="https://www.linkedin.com/in/anshuman-singh-4537731a5/"> My LinkedIn profile. </a></strong>
+		</div>	
     </nav>
 
     <!-- Home section part-->
