--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="alert warning">
 			<span class="closebtn">&times;</span>  
-				<strong> 🚧 Hey There!</strong> My website is under-construction and will be moved to <strong>www.anshuman.me</strong> by 15th February. 🚧 
+				<strong> 🚧 Hey There!</strong> My website is under-construction and will be moved to <strong>www.anshuman.me</strong> by 1st April. 🚧 
 		</div>
 
 		<div class="alert success">
